--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -38,7 +38,7 @@
         {"@context":"https://schema.org","@type":"WebSite","description":"GFL FAQs first. Might add things later.","headline":"Random Scraps","name":"Random Scraps","url":"https://xxx-yyy-xxx.github.io/"}</script>
         <!-- End Jekyll SEO tag -->
     </head>
-    
+
     <body>
         <header>
             <div class="container">
@@ -51,9 +51,7 @@
 
         <div class="container">
             <section id="main_content">
-                <p>This is the main page now. B)</p>
-
-                <p><a href="/GFL">GFL FAQs</a></p>
+                <p>Trial HTML Index</p>
 
                 <!-- search bar -->
                 <!-- qna cards -->
