--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -5,20 +5,20 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/assets/css/style.css?v=2d3b5126dd9bdaf552f3aef918356c51b10c15a9">
+
         <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
+            <!-- Setup theme-color -->
 
-        <!-- Setup theme-color -->
-        <!-- start theme color meta headers -->
-        <meta name="theme-color" content="#151515">
-        <meta name="msapplication-navbutton-color" content="#151515">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <!-- end theme color meta headers -->
+            <!-- start theme color meta headers -->
+            <meta name="theme-color" content="#151515">
+            <meta name="msapplication-navbutton-color" content="#151515">
+            <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+            <!-- end theme color meta headers -->
 
-        <!-- Setup Google Analytics -->
+            <!-- Setup Google Analytics -->
 
-        <!-- You can set your favicon here -->
-        <!-- link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" -->
-
+            <!-- You can set your favicon here -->
+            <link rel="icon" href="/univasset/Favicon.png">
         <!-- end custom head snippets -->
 
         <!-- Begin Jekyll SEO tag v2.8.0 -->
