--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -18,7 +18,7 @@
             <!-- Setup Google Analytics -->
 
             <!-- You can set your favicon here -->
-            <link rel="icon" href="/univasset/Favicon.png">
+            <link rel="icon" type="image/png" href="/univasset/Favicon.png">
         <!-- end custom head snippets -->
 
         <!-- Begin Jekyll SEO tag v2.8.0 -->
@@ -58,6 +58,5 @@
 
             </section>
         </div>
-
     </body>
 </html>
