--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -42,9 +42,7 @@
     <body>
         <header>
             <div class="container">
-                <a id="a-title" href="/">
-                    <h1>Random Scraps</h1>
-                </a>
+                <a id="a-title" href="/"><h1>Random Scraps</h1></a>
                 <h2>GFL FAQs first. Might add things later.</h2>
             </div>
         </header>
