--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -51,7 +51,13 @@
             <section id="main_content">
                 <p>Trial HTML Index</p>
 
-                <!-- search bar -->
+                <div class="search-container">
+                    <form action="/action_page.php">
+                        <input type="text" placeholder="Search.." name="search">
+                        <button type="submit"><i class="fa fa-search"></i></button>
+                    </form>
+                </div>
+                
                 <!-- qna cards -->
 
             </section>
