--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -54,7 +54,7 @@
                 <div class="search-container">
                     <form action="/action_page.php">
                         <input type="text" placeholder="Search.." name="search">
-                        <button type="submit"><i class="fa fa-search"></i></button>
+                        <button type="submit">Search</button>
                     </form>
                 </div>
                 
