--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -43,14 +43,12 @@
         <header>
             <div class="container">
                 <a id="a-title" href="/"><h1>Random Scraps</h1></a>
-                <h2>GFL FAQs first. Might add things later.</h2>
+                <h2>Trial HTML Index Page</h2>
             </div>
         </header>
 
         <div class="container">
             <section id="main_content">
-                <p>Trial HTML Index</p>
-
                 <div class="search-container">
                     <form action="/action_page.php">
                         <input type="text" placeholder="Search.." name="search">
@@ -58,7 +56,22 @@
                     </form>
                 </div>
                 
-                <!-- qna cards -->
+                <fieldset>
+                    <h1>Questions</h1>
+                    <legend>Personalia:</legend>
+                    <label for="fname">First name:</label>
+                    <input type="text" id="fname" name="fname"><br><br>
+                    <label for="lname">Last name:</label>
+                    <input type="text" id="lname" name="lname"><br><br>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email"><br><br>
+                    <label for="birthday">Birthday:</label>
+                    <input type="date" id="birthday" name="birthday"><br><br>
+                    <input type="submit" value="Submit">
+                    <blockquote>Answers</blockquote>
+                    <label>Tags:</label>
+                   </fieldset>
+                  
 
             </section>
         </div>
