--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -56,9 +56,11 @@
                     </form>
                 </div>
                 
+                <script></script>
+
                 <fieldset>
                     <h1>Questions</h1>
-                    <legend>Personalia:</legend>
+                    <legend><h1>Personalia:</h1></legend>
                     <label for="fname">First name:</label>
                     <input type="text" id="fname" name="fname"><br><br>
                     <label for="lname">Last name:</label>
@@ -70,9 +72,7 @@
                     <input type="submit" value="Submit">
                     <blockquote>Answers</blockquote>
                     <label>Tags:</label>
-                   </fieldset>
-                  
-
+                </fieldset>
             </section>
         </div>
     </body>
