--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -59,9 +59,8 @@
                 <script></script>
 
                 <fieldset>
-                    <h1>Questions</h1>
-                    <legend><h1>Personalia:</h1></legend>
-                    <label for="fname">First name:</label>
+                    <legend><h1>Questions</h1></legend>
+                    <!-- <label for="fname">First name:</label>
                     <input type="text" id="fname" name="fname"><br><br>
                     <label for="lname">Last name:</label>
                     <input type="text" id="lname" name="lname"><br><br>
@@ -69,7 +68,7 @@
                     <input type="email" id="email" name="email"><br><br>
                     <label for="birthday">Birthday:</label>
                     <input type="date" id="birthday" name="birthday"><br><br>
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Submit"> -->
                     <blockquote>Answers</blockquote>
                     <label>Tags:</label>
                 </fieldset>
