--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/assets/css/style.css?v=2d3b5126dd9bdaf552f3aef918356c51b10c15a9">
+        <link rel="stylesheet" href="/externalcss.css">
 
         <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
             <!-- Setup theme-color -->
@@ -70,7 +71,7 @@
                     <input type="date" id="birthday" name="birthday"><br><br>
                     <input type="submit" value="Submit"> -->
                     <blockquote>Answers</blockquote>
-                    <label>Tags:</label>
+                    <label>Tags:<span class="tags">asdf</span></label>
                 </fieldset>
             </section>
         </div>
