--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -60,7 +60,7 @@
                 <script></script>
 
                 <fieldset>
-                    <legend><h1>Questions</h1></legend>
+                    <legend><h3>Questions</h3></legend>
                     <!-- <label for="fname">First name:</label>
                     <input type="text" id="fname" name="fname"><br><br>
                     <label for="lname">Last name:</label>
@@ -70,8 +70,8 @@
                     <label for="birthday">Birthday:</label>
                     <input type="date" id="birthday" name="birthday"><br><br>
                     <input type="submit" value="Submit"> -->
-                    <blockquote>Answers</blockquote>
-                    <label>Tags:<span class="tags">asdf</span></label>
+                    <h2>Answers</h2>
+                    <label>Tags:</label><span class="tags">asdf</span>
                 </fieldset>
             </section>
         </div>
