--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -70,8 +70,9 @@
                     <label for="birthday">Birthday:</label>
                     <input type="date" id="birthday" name="birthday"><br><br>
                     <input type="submit" value="Submit"> -->
-                    <h2>Answers</h2>
-                    <label>Tags:</label><span class="tags">asdf</span>
+                    Answers
+                    
+                    Tags:<span class="tags">asdf</span>
                 </fieldset>
             </section>
         </div>
