--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -57,7 +57,19 @@
                     </form>
                 </div>
                 
-                <script></script>
+                <script>
+                    for (variable of iterable)
+                    {
+                        if (search in tags)
+                        {
+                            <fieldset>
+                                <legend><h3>Questions</h3></legend>
+                                Answers
+                                Tags:<span class="tags">asdf</span>
+                            </fieldset>
+                        }
+                    }
+                </script>
 
                 <fieldset>
                     <legend><h3>Questions</h3></legend>
@@ -71,7 +83,7 @@
                     <input type="date" id="birthday" name="birthday"><br><br>
                     <input type="submit" value="Submit"> -->
                     Answers
-                    
+
                     Tags:<span class="tags">asdf</span>
                 </fieldset>
             </section>
