--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -58,9 +58,10 @@
                 </div>
                 
                 <script>
-                    for (variable of iterable)
+                    /* foreach (variable in iterable) */
+                    for (var i; i < 5; i++)
                     {
-                        if (search in tags)
+                        /* if (search in tags) */
                         {
                             <fieldset>
                                 <legend><h3>Questions</h3></legend>
