--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -77,14 +77,10 @@
                     /* foreach (variable in iterable) */
                     for (var i; i < 5; i++)
                     {
-                        /* if (search in tags) */
+                        document.body.innerHTML += '<fieldset><legend><h3>Questions</h3></legend>Answers<br></br>Tags:<span class="tags">asdf</span></fieldset>'
+                        /* if (search in tags)
                         {
-                            <fieldset>
-                                <legend><h3>Questions</h3></legend>
-                                Answers
-                                Tags:<span class="tags">asdf</span>
-                            </fieldset>
-                        }
+                        }*/
                     }
                 </script>
 
