--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -70,7 +70,7 @@
                     <input type="submit" value="Submit"> -->
                     Answers
                     <br></br>
-                    Tags:<span class="tags">asdf</span>
+                    Tags:<span class="tags">jkl;</span>
                 </fieldset>
 
                 <script>
