--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -77,7 +77,7 @@
                     /* foreach (variable in iterable) */
                     for (var i; i < 5; i++)
                     {
-                        document.body.innerHTML += '<fieldset><legend><h3>Questions</h3></legend>Answers<br></br>Tags:<span class="tags">asdf</span></fieldset>'
+                        document.body.innerHTML += '<fieldset><legend><h3>Questions</h3></legend>Answers<br></br>Tags:<span class="tags">asdf</span></fieldset>';
                         /* if (search in tags)
                         {
                         }*/
