--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -73,15 +73,17 @@
                     Tags:<span class="tags">jkl;</span>
                 </fieldset>
 
+                <div id="qna"></div>
+
                 <script>
-                    /* foreach (variable in iterable) */
-                    for (var i; i < 5; i++)
+                    var wrap = document.getElementById("qna");
+
+                    for (var i = 0; i < 5; i++)
                     {
-                        document.body.innerHTML += '<fieldset><legend><h3>Questions</h3></legend>Answers<br></br>Tags:<span class="tags">asdf</span></fieldset>';
-                        /* if (search in tags)
-                        {
-                        }*/
+                        boxes += '<fieldset><legend><h3>Questions</h3></legend>Answers<br></br>Tags:<span class="tags">' + i + '</span></fieldset>';
                     }
+
+                    wrap.innerHTML = boxes;
                 </script>
 
             </section>
