--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -73,7 +73,9 @@
                     Tags:<span class="tags">jkl;</span>
                 </fieldset>
 
-                <div id="qna"></div>
+                <div id="qna">
+                    
+                </div>
 
                 <script>
                     for (var i = 0; i < 5; i++)
