--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -57,33 +57,27 @@
                     </form>
                 </div>
                 
-                <fieldset>
+                <!-- <fieldset>
                     <legend><h3>Questions</h3></legend>
-                    <!-- <label for="fname">First name:</label>
-                    <input type="text" id="fname" name="fname"><br><br>
-                    <label for="lname">Last name:</label>
-                    <input type="text" id="lname" name="lname"><br><br>
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email"><br><br>
-                    <label for="birthday">Birthday:</label>
-                    <input type="date" id="birthday" name="birthday"><br><br>
-                    <input type="submit" value="Submit"> -->
                     Answers
                     <br></br>
                     Tags:<span class="tags">jkl;</span>
-                </fieldset>
+                </fieldset> -->
 
                 <div id="qna">
-                    
+
                 </div>
 
                 <script>
+                    var wrap = document.getElementById("qna");
+                    var boxes = '';
+
                     for (var i = 0; i < 5; i++)
                     {
                         boxes += '<p>test</p>'//`<fieldset><legend><h3>Questions</h3></legend>Answers<br></br>Tags:<span class="tags">${i}</span></fieldset>`;
                     }
 
-                    document.getElementById("qna").innerHTML = boxes;
+                    wrap.innerHTML = boxes;
                 </script>
 
             </section>
