--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -67,12 +67,12 @@
 
                     for (var i = 0; i < 5; i++)
                     {
-                        boxes += ```<fieldset>
+                        boxes += `<span class="tags">${i}</span>`/*```<fieldset>
                             <legend><h3>Questions</h3></legend>
                             Answers
                             <br></br>
                             Tags:<span class="tags">${i}</span>
-                            </fieldset>```;
+                            </fieldset>```;*/
                     }
 
                     wrap.innerHTML = boxes;
