--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -66,7 +66,7 @@
         <script src="/GFL/cards.json"></script>
         <script type="text/javascript" src="/externaljavascript.js"></script>
         <script>
-            //const questionCards = require('/GFL/cards.json');
+            //const questionCards = ;
 
             /* const questionCards = fetch('/GFL/cards.json')
                 .then(response => response.json() )
@@ -85,7 +85,7 @@
 
             const cardField = document.getElementById("qna");
             var boxes = '';
-            var questionCards = JSON.parse('/GFL/cards.json');
+            var questionCards = require('/GFL/cards.json');
 
             //Tags: 
 
