--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -66,8 +66,6 @@
         <script src="/GFL/cards.json"></script>
         <script type="text/javascript" src="/externaljavascript.js"></script>
         <script>
-            //const questionCards = ;
-
             /* const questionCards = fetch('/GFL/cards.json')
                 .then(response => response.json() )
                 .then(data => appendData(data) )
@@ -85,7 +83,10 @@
 
             const cardField = document.getElementById("qna");
             var boxes = '';
-            var questionCards = require('/GFL/cards.json');
+            //var questionCards;
+
+            import questionCards from '/GFL/cards.json';
+            questionCards = JSON.parse(questionCards);
 
             //Tags: 
 
