--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -86,7 +86,7 @@
             //var questionCards;
 
             import questionCards from '/GFL/cards.json';
-            questionCards = JSON.parse(questionCards);
+            //questionCards = JSON.parse(questionCards);
 
             //Tags: 
 
