--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -116,7 +116,7 @@
                 let searchText = sessionStorage.outputCards;
                 //var cardTags;
 
-                boxes = searchText;
+                boxes = searchText.replace(' ', ' + ');
 
                 //if (searchText.includes('Tags:')) {
                 //cardTags = searchText.replace('Tags:', '');//.split(' ').filter(singleTags => singleTags !== '');
