--- a/GFL/indextrial.html
+++ b/GFL/indextrial.html
@@ -116,14 +116,14 @@
                 let searchText = sessionStorage.outputCards;
                 //var cardTags;
 
-                boxes = searchText.split(' ');
-
                 //replace(/ /g, ' + ');
-                //if (searchText.includes('Tags:')) {
-                //cardTags = searchText.replace('Tags:', '').split(' ').filter(singleTags => singleTags !== '');
-                //} else {
-                //let phrase = new RegExp(searchText, 'i');
-                //}
+                if (searchText.includes('Tags:')) {
+                    let cardTags = searchText.replace('Tags:', '').split(' ').filter(singleTags => singleTags != '');
+                } else {
+                    let phrase = new RegExp(searchText, 'i');
+                }
+
+                boxes = cardTags;
 
                 //for (const cards of questionCards) {
                     /* if (cardTags != null) {
