--- a/GFL/index.html
+++ b/GFL/index.html
@@ -50,6 +50,8 @@
 
         <div class="container">
             <section id="main_content">
+                <p><h1><a href="/GFL/indexsub">Link to topics repository.</a></h1></p>
+
                 <p>Use <code>Tags:</code> at the start to search using tags. Use Space to separate tags. Tags are case-sensitive.</p>
 
                 <form onsubmit="findCards()">
